Fix css class making content invisible

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -141,4 +141,10 @@ body{
     overflow-wrap: break-word;
 }
 
+.mdl-layout-title > a {
+    text-decoration: none;
+}
 
+.page-content {
+    margin: auto;
+}
